tests/snapshots/integration__compgen__filedir_win__value_name.snap
---
source: tests/compgen.rs
expression: data
---
************ COMPGEN `prog --oa ` ************
.\.git\	0	.\.git\	
.\.github\	0	.\.github\	
.\.gitignore	1	.\.gitignore	
.\.vscode\	0	.\.vscode\	
.\Argcfile.sh	1	.\Argcfile.sh	
.\Cargo.lock	1	.\Cargo.lock	
.\Cargo.toml	1	.\Cargo.toml	
.\LICENSE-APACHE	1	.\LICENSE-APACHE	
.\LICENSE-MIT	1	.\LICENSE-MIT	
.\README.md	1	.\README.md	
.\examples\	0	.\examples\	
.\src\	0	.\src\	
.\target\	0	.\target\	
.\tests\	0	.\tests\	
.\tmp\	0	.\tmp\	

************ COMPGEN `prog --oa ./` ************
.\	0	.\	

************ COMPGEN `prog --oa t` ************
.\target\	0	.\target\	
.\tests\	0	.\tests\	
.\tmp\	0	.\tmp\	

************ COMPGEN `prog --oa ./t` ************
.\t	0	.\t	

************ COMPGEN `prog --oa ex` ************
.\examples\	0	.\examples\	

************ COMPGEN `prog --ob ` ************
.\README.md	1	.\README.md	

************ COMPGEN `prog --ob RE` ************
.\README.md	1	.\README.md	

************ COMPGEN `prog --oc ` ************
.\.git\	0	.\.git\	
.\.github\	0	.\.github\	
.\.vscode\	0	.\.vscode\	
.\examples\	0	.\examples\	
.\src\	0	.\src\	
.\target\	0	.\target\	
.\tests\	0	.\tests\	
.\tmp\	0	.\tmp\	

************ COMPGEN `prog --od ` ************
.\Cargo.toml	1	.\Cargo.toml	
.\README.md	1	.\README.md	


